remove deprecated java opts in soavirt scripts